--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -104,7 +104,7 @@ button:disabled {
 .app-header {
   background: #102027;
   color: white;
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 10;
   width: 100%;
@@ -113,30 +113,42 @@ button:disabled {
 .header-inner {
   max-width: 600px;
   margin: 0 auto;
-  padding-left: 1.0rem;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 
-.header-left h2 {
+.event-title h2 {
   margin: 0.75rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 500;
+  text-align: center;
   color: rgba(255, 255, 255, 0.8);
 }
 
-.header-right .leaderboard-button {
-  background: #eee;
-  margin: 0;
-  color: #102027;
-  border-radius: 0px 0px 0px 10px;
-  padding: 0.5rem 1rem;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+.leaderboard-link {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
 }
+
+.leaderboard-button {
+  width: 100%;
+  gap: 0.5rem;
+  background: #fcb64f;
+  color: #102027;
+  font-weight: bold;
+  padding: 0.6rem;
+  font-size: 1.1rem;
+  border: none;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 12px 12px;
+}
+
 
 .player-entry-card {
   margin: 0.8rem;
