--- a/src/lib/styles/base.css
+++ b/src/lib/styles/base.css
@@ -1,5 +1,5 @@
 /* 1. Normalize browser defaults */
-@import-normalize;
+@import 'normalize.css';
 
 /* 2. Box sizing reset */
 *,
@@ -28,10 +28,16 @@ ul, ol {
 
 /* 5. Reset buttons */
 button {
-  all: unset;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
   cursor: pointer;
   font-family: inherit;
   font-size: 1rem;
+  text-align: inherit;
 }
 
 /* 6. Inputs */
